srcs/tester/base/vector/constructor/log.txt
./base/vector/constructor/patched.cpp:8:2: error: use of undeclared identifier 'ft'
 ft::vector<int> first; // empty vector of ints
 ^
./base/vector/constructor/patched.cpp:9:2: error: use of undeclared identifier 'ft'
 ft::vector<int> second (4,100); // four ints with value 100
 ^
./base/vector/constructor/patched.cpp:10:2: error: use of undeclared identifier 'ft'
 ft::vector<int> third (second.begin(),second.end()); // iterating through second
 ^
./base/vector/constructor/patched.cpp:11:2: error: use of undeclared identifier 'ft'
 ft::vector<int> fourth (third); // a copy of third
 ^
./base/vector/constructor/patched.cpp:15:2: error: use of undeclared identifier 'ft'
 ft::vector<int> fifth (myints, myints + sizeof(myints) / sizeof(int) );
 ^
./base/vector/constructor/patched.cpp:18:7: error: use of undeclared identifier 'ft'
 for (ft::vector<int>::iterator it = fifth.begin(); it != fifth.end(); ++it)
      ^
./base/vector/constructor/patched.cpp:18:38: error: use of undeclared identifier 'fifth'
 for (ft::vector<int>::iterator it = fifth.begin(); it != fifth.end(); ++it)
                                     ^
./base/vector/constructor/patched.cpp:18:59: error: use of undeclared identifier 'fifth'
 for (ft::vector<int>::iterator it = fifth.begin(); it != fifth.end(); ++it)
                                                          ^
8 errors generated.
